Make sure Shop the look items can fit 2 columns on iPhone.

--- a/apps/pinpoint/static/pinpoint/themes/nastygal/nastygal.css
+++ b/apps/pinpoint/static/pinpoint/themes/nastygal/nastygal.css
@@ -409,7 +409,7 @@
     .previewContainer .stl-look .stl-item,
     .previewContainer .landscape .stl-look .stl-item {
         display: inline-block;
-        width: 150px;
+        width: 145px;
         vertical-align: top;
     }
 
